Fix wrapping if too many dependencies

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,3 +9,12 @@
 .selected a {
   border: 1px solid rgb(51, 122, 183);
 }
+
+
+.versions-table tbody tr td {
+  vertical-align: middle;
+}
+
+.version-col {
+  min-width: 102px;
+}
